updated styling to show overlay on cards and stop images stretching in divs

--- a/src/App.css
+++ b/src/App.css
@@ -108,6 +108,7 @@ a, a:visited, a:hover, a:active {
 .card__image {
   width: 100%;
   height: 100%;
+  object-fit: cover;
   border-radius: 10px;
 }
 
@@ -115,10 +116,10 @@ a, a:visited, a:hover, a:active {
   width: 100%;
   height: 100%;
   position: absolute;
-  border-radius: 25px;
+  border-radius: 10px;
   top: 0;
   left: 0;
-  background-color: var(--color-linear);
+  background: var(--color-linear);
   z-index: 1;
 }
 
@@ -126,11 +127,11 @@ a, a:visited, a:hover, a:active {
   color: var(--color-white);
   position: absolute;
   top: 90%;
-  left: 35%;
+  left: 40%;
   transform: translate(-50%, -50%);
   z-index: 2;
   font-weight: 400;
   font-size: 1em;
   letter-spacing: 1px;
-  width: 60%;
+  width: 70%;
 }
